Land a fix that ought to stop scrollbars from appearing. (LP: #986283)

--- a/slideshows/xubuntu/slides/link/base.css
+++ b/slideshows/xubuntu/slides/link/base.css
@@ -83,14 +83,29 @@ html, body {
 	font-family: "Droid Sans", sans-serif;
 }
 
+#wrapper {
+	position: absolute;
+
+	width: 750px;
+	height: 100%;
+}
+
 #slideshow {
 	background: #0b3a6b url(wall.png) 0 0 no-repeat;
 	color: #fff;
 
 	width: 750px;
-	height: 420px;
+	min-height: 420px;
+	height: 100%;
 
 	overflow: hidden;
+}
+
+#slideshow > div {
+	position: absolute;
+
+	height: 100%;
+	width: 100%;
 }
 
 .header {
